[gd_scene load_steps=6 format=2]

[ext_resource path="res://gui/StarfieldControl.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/toolbar/EnvironmentMenu.gd" type="Script" id=2]
[ext_resource path="res://gui/SkyControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/SparkleControl.tscn" type="PackedScene" id=4]
[ext_resource path="res://gui/MoonControl.tscn" type="PackedScene" id=5]

[node name="EnvironmentMenu" type="MenuButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.5
margin_top = -10.0
margin_right = 46.5
margin_bottom = 10.0
text = "Environment"
items = [ "Sky", null, 0, false, false, 0, 0, null, "", false, "Stars", null, 0, false, false, 10, 0, null, "", false, "Moon", null, 0, false, false, 20, 0, null, "", false, "", null, 0, false, true, -1, 0, null, "", true, "Sparkles", null, 0, false, false, 30, 0, null, "", false ]
script = ExtResource( 2 )

[node name="SkyDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -780.677
margin_top = 70.0
margin_right = -480.677
margin_bottom = 370.0
popup_exclusive = true
window_title = "Sky"
resizable = true

[node name="SkyMargin" type="MarginContainer" parent="SkyDialog"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="SkyDialog/SkyMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 290.0

[node name="Sky" parent="SkyDialog/SkyMargin/CenterContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 44.0
margin_top = 44.0
margin_right = 236.0
margin_bottom = 236.0

[node name="StarDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -467.452
margin_top = 70.0
margin_right = 0.548004
margin_bottom = 370.0
popup_exclusive = true
window_title = "Stars"
resizable = true

[node name="StarMargin" type="MarginContainer" parent="StarDialog"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="StarDialog/StarMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 458.0
margin_bottom = 290.0

[node name="Starfield" parent="StarDialog/StarMargin/CenterContainer" instance=ExtResource( 1 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 5.0
margin_top = 64.0
margin_right = 442.0
margin_bottom = 216.0

[node name="MoonDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 9.085
margin_top = 70.0
margin_right = 338.085
margin_bottom = 369.0
popup_exclusive = true
window_title = "Moon"
resizable = true

[node name="MoonMargin" type="MarginContainer" parent="MoonDialog"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="MoonDialog/MoonMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 319.0
margin_bottom = 289.0

[node name="Moon" parent="MoonDialog/MoonMargin/CenterContainer" instance=ExtResource( 5 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 75.0
margin_right = 302.0
margin_bottom = 203.0

[node name="SparklesDialog" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 353.984
margin_top = 70.0
margin_right = 780.984
margin_bottom = 370.0
popup_exclusive = true
window_title = "Sparkles"
resizable = true

[node name="SparklesMargin" type="MarginContainer" parent="SparklesDialog"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="SparklesDialog/SparklesMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 417.0
margin_bottom = 290.0

[node name="Sparkles" parent="SparklesDialog/SparklesMargin/CenterContainer" instance=ExtResource( 4 )]
unique_name_in_owner = true
margin_left = 14.0
margin_top = 2.0
margin_right = 393.0
margin_bottom = 278.0

[connection signal="resized" from="SkyDialog" to="." method="_on_SkyDialog_resized"]
[connection signal="resized" from="SkyDialog/SkyMargin/CenterContainer/Sky" to="." method="_on_Sky_resized"]
[connection signal="resized" from="StarDialog" to="." method="_on_StarDialog_resized"]
[connection signal="regenerate" from="StarDialog/StarMargin/CenterContainer/Starfield" to="." method="_on_Starfield_regenerate"]
[connection signal="resized" from="StarDialog/StarMargin/CenterContainer/Starfield" to="." method="_on_Starfield_resized"]
[connection signal="resized" from="MoonDialog" to="." method="_on_MoonDialog_resized"]
[connection signal="resized" from="MoonDialog/MoonMargin/CenterContainer/Moon" to="." method="_on_Moon_resized"]
[connection signal="resized" from="SparklesDialog" to="." method="_on_SparklesDialog_resized"]
[connection signal="resized" from="SparklesDialog/SparklesMargin/CenterContainer/Sparkles" to="." method="_on_Sparkles_resized"]
